force-app/main/default/objects/Bundle__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Returns true if we&apos;re in the Active window (or the active window is blank)</description>
    <formula>IF(
 AND(
    OR( ISBLANK( Valid_From_Date__c ) ,Valid_From_Date__c&lt;= TODAY()) ,
    OR( ISBLANK( Valid_To_Date__c  ) ,Valid_To_Date__c&gt;=TODAY()) ) , 
 true, 
 false)</formula>
    <inlineHelpText>For a bundle to be active, either leave the valid dates blank, or make sure that today is within the active window.  To inactivate a bundle, enter a Valid To date that is before today.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>