force-app/main/default/objects/Bundle__c/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <description>The storage type for the item in this single-product bundle.</description>
    <inlineHelpText>The storage type for the item in this single-product bundle.</inlineHelpText>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Storage_Types</valueSetName>
    </valueSet>
</CustomField>