force-app/main/default/objects/Bundle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Affects how bundles are shown and filtered in the Order Builder.</description>
    <inlineHelpText>Single-Product bundles contain storage + processing for one service.  Multi-Product bundles contain two or more services or products.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Product</fullName>
            </value>
            <value>
                <fullName>Multi-Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>