force-app/main/default/objects/Bundle__c/fields/Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_From_Date__c</fullName>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>